--- a/as-modules/as-modules-library/pom.xml
+++ b/as-modules/as-modules-library/pom.xml
@@ -30,6 +30,11 @@
 
       <dependency>
          <groupId>org.infinispan</groupId>
+         <artifactId>infinispan-cachestore-jpa</artifactId>
+      </dependency>
+
+      <dependency>
+         <groupId>org.infinispan</groupId>
          <artifactId>infinispan-cachestore-leveldb</artifactId>
       </dependency>
 
