--- a/server/integration/integration/src/main/resources/org/infinispan/server/endpoint/subsystem/LocalDescriptions.properties
+++ b/server/integration/integration/src/main/resources/org/infinispan/server/endpoint/subsystem/LocalDescriptions.properties
@@ -83,6 +83,11 @@ sasl-policy.no-anonymous=The optional nested "no-anonymous" element contains a b
 sasl-policy.no-dictionary=The optional nested "no-dictionary" element contains a boolean value which specifies whether mechanisms susceptible to passive dictionary attacks are permitted.  "false" to permit, "true" to deny.
 sasl-policy.no-plain-text=The optional nested "no-plain-text" element contains a boolean value which specifies whether mechanisms susceptible to simple plain passive attacks (e.g., "PLAIN") are not permitted.    "false" to permit, "true" to deny.
 sasl-policy.pass-credentials=The optional nested "pass-credentials" element contains a boolean value which specifies whether mechanisms that pass client credentials are required.
+property=Adds a SASL configuration property
+property.add=Adds a SASL configuration property
+property.remove=Removes a SASL configuration property
+property.name=The name of the SASL configuration property
+property.value=The value of the SASL configuration property
 encryption=Encryption Configuration
 encryption.add=Adds the encryption configuration to the connector
 encryption.remove=Removes the encryption configuration from the connector
