--- a/client/hotrod-client/pom.xml
+++ b/client/hotrod-client/pom.xml
@@ -25,6 +25,12 @@
       </dependency>
 
       <dependency>
+         <groupId>org.jboss.marshalling</groupId>
+         <artifactId>jboss-marshalling-osgi</artifactId>
+         <optional>true</optional>
+      </dependency>
+
+      <dependency>
          <groupId>commons-pool</groupId>
          <artifactId>commons-pool</artifactId>
       </dependency>
