--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -101,6 +101,7 @@
       <version.c3p0>0.9.1.2</version.c3p0>
       <version.commons.codec>1.4-redhat-2</version.commons.codec>
       <version.commons.collections>3.2.1-redhat-2</version.commons.collections>
+      <version.commons.compress>1.5</version.commons.compress>
       <version.commons.httpclient>3.1-redhat-2</version.commons.httpclient>
       <version.commons.logging>1.1.1</version.commons.logging>
       <version.commons.math>2.2</version.commons.math>
@@ -109,7 +110,7 @@
       <version.h2.driver>1.3.168-redhat-2</version.h2.driver>
       <version.hibernate.core>4.2.12.Final-redhat-1</version.hibernate.core>
       <version.hibernate.entitymanager>${version.hibernate.core}</version.hibernate.entitymanager>
-      <version.hibernate.hql.parser>1.0.0.Alpha6-redhat-1</version.hibernate.hql.parser>
+      <version.hibernate.hql.parser>1.0.0.CR1-redhat-1</version.hibernate.hql.parser>
       <version.hibernate.javax.persistence>1.0.1.Final-redhat-2</version.hibernate.javax.persistence>
       <version.httpclient>4.2.1-redhat-1</version.httpclient>
       <version.jackson>1.9.9-redhat-2</version.jackson>
