ISPN-4354 Unable to use custom keys/values with clustered caches in OSGi
Change the infinispan-core bundle headers to dynamically import * as the classloader on this bundle is used by default in the class resolver.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -209,6 +209,8 @@
                      <!-- wildcard required for blueprint services until the explicit import package def is removed completely -->
                      *
                   </Import-Package>
+                  <!-- Required for loading client classes. -->
+                  <DynamicImport-Package>*</DynamicImport-Package>
                </instructions>
             </configuration>
          </plugin>
