BZ1109578 ISPN-4382 Lightweight security framework BZ1109579 ISPN-4056 Cache masks in the cluster registry

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1169,6 +1169,7 @@
                </signature>
                <ignores>
                   <ignore>sun.misc.Unsafe</ignore>
+                  <ignore>sun.reflect.Reflection</ignore>
                   <ignore>org.apache.lucene.store.IOContext</ignore>
                </ignores>
             </configuration>
