ISPN-4380 ISPN-4227 ISPN-4354 fix build issues on JDG

--- a/integrationtests/osgi/src/test/resources/maven.properties
+++ b/integrationtests/osgi/src/test/resources/maven.properties
@@ -5,4 +5,4 @@
 
 project.version=${project.version}
 version.karaf=${version.karaf}
-maven.repo.local=${maven.repo.local}
+localRepository=${localRepository}
