--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -73,7 +73,7 @@
       <version.jta>1.0.1.Final-redhat-2</version.jta>
       <version.leveldbjni>1.8-redhat.002</version.leveldbjni>
       <version.netty>4.0.18.Final-redhat-1</version.netty>
-      <version.osgi>4.2.0-redhat-3</version.osgi>
+      <version.osgi>4.3.1</version.osgi>
       <version.rhq>4.4.0.JON310GA</version.rhq>
       <version.scala>2.10.4-redhat-1</version.scala>
       <version.xstream>1.4.7-redhat-1</version.xstream>
