BZ1100259 ISPN-4406 Security integration tests should run sequentially
* This is because tests rely on static field initialisation.
* To support this, test cache manager factory must be able to cope with
checking if the cache is closed even if it's unauthorised.

--- a/integrationtests/security-manager-it/pom.xml
+++ b/integrationtests/security-manager-it/pom.xml
@@ -54,6 +54,7 @@
             <configuration>
                <groups>${defaultTestGroup}</groups>
                <excludedGroups>${defaultExcludedTestGroup}</excludedGroups>
+               <parallel>none</parallel>
                <systemPropertyVariables>
                   <infinispan.test.jgroups.protocol>${infinispan.test.jgroups.protocol}</infinispan.test.jgroups.protocol>
                   <jgroups.bind_addr>127.0.0.1</jgroups.bind_addr>
