BZ1106451 ISPN-4442 Package the Remoting JARs with the CLI client in embedded mode

--- a/cli/cli-client/pom.xml
+++ b/cli/cli-client/pom.xml
@@ -23,6 +23,10 @@
          <artifactId>jboss-logging</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.jboss.remoting3</groupId>
+         <artifactId>jboss-remoting</artifactId>
+      </dependency>
+      <dependency>
          <groupId>gnu.getopt</groupId>
          <artifactId>java-getopt</artifactId>
       </dependency>
