--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -131,7 +131,8 @@
       <version.jboss.ejb-client>1.0.25.Final-redhat-1</version.jboss.ejb-client>
       <version.jboss.logging.jboss-logging-processor>1.1.0.Final-redhat-1</version.jboss.logging.jboss-logging-processor>
       <version.jboss.logmanager>1.4.0.Final-redhat-1</version.jboss.logmanager>
-      <version.jboss.remoting3>3.3.0.Final-redhat-1</version.jboss.remoting3>
+      <version.jboss.remoting3>3.2.19.GA-redhat-1</version.jboss.remoting3>
+      <version.jboss.remotingjmx>1.1.2.Final-redhat-1</version.jboss.remotingjmx>
       <version.jboss.sasl>1.0.4.Final-redhat-1</version.jboss.sasl>
       <version.jboss.spec>3.0.2.Final-redhat-4</version.jboss.spec>
       <version.org.jboss.spec.javax.resource.jboss-connector-api_1.6_spec>1.0.1.Final-redhat-2</version.org.jboss.spec.javax.resource.jboss-connector-api_1.6_spec>
@@ -155,6 +156,7 @@
       <version.stringtemplate>3.2.1-redhat-1</version.stringtemplate>
       <version.testng>6.8</version.testng>
       <version.weld>1.1.13.Final-redhat-1</version.weld>
+      <version.xnio>3.0.9.GA-redhat-1</version.xnio>
       <version.antlr.maven.plugin>3.4</version.antlr.maven.plugin>
       <version.exec.maven.plugin>1.2.1</version.exec.maven.plugin>
       <version.maven.animal.sniffer>1.9</version.maven.animal.sniffer>
@@ -488,6 +490,40 @@
             <groupId>org.jboss.remoting3</groupId>
             <artifactId>jboss-remoting</artifactId>
             <version>${version.jboss.remoting3}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.xnio</groupId>
+                    <artifactId>xnio-api</artifactId>
+                </exclusion>
+            </exclusions>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.remotingjmx</groupId>
+            <artifactId>remoting-jmx</artifactId>
+            <version>${version.jboss.remotingjmx}</version>
+            <exclusions>
+               <exclusion>
+                  <groupId>org.jboss.logging</groupId>
+                  <artifactId>jboss-logging-processor</artifactId>
+               </exclusion>
+               <exclusion>
+                  <groupId>org.jboss.logmanager</groupId>
+                  <artifactId>jboss-logmanager</artifactId>
+               </exclusion>
+               <exclusion>
+                    <groupId>org.jboss.xnio</groupId>
+                    <artifactId>xnio-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.xnio</groupId>
+                    <artifactId>xnio-nio</artifactId>
+                </exclusion>
+            </exclusions>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.xnio</groupId>
+            <artifactId>xnio-nio</artifactId>
+            <version>${version.xnio}</version>
          </dependency>
          <dependency>
             <groupId>org.jboss.resteasy</groupId>
