--- a/pom.xml
+++ b/pom.xml
@@ -285,5 +285,31 @@ pageTracker._trackPageview();
          </build>
       </profile>
    </profiles>
+   <dependencies>
+      <dependency>
+         <groupId>org.jboss.remotingjmx</groupId>
+         <artifactId>remoting-jmx</artifactId>
+         <exclusions>
+            <exclusion>
+               <artifactId>xnio-api</artifactId>
+               <groupId>org.jboss.xnio</groupId>
+            </exclusion>
+            <exclusion>
+               <artifactId>xnio-nio</artifactId>
+               <groupId>org.jboss.xnio</groupId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.remoting3</groupId>
+         <artifactId>jboss-remoting</artifactId>
+         <exclusions>
+            <exclusion>
+               <artifactId>xnio-api</artifactId>
+               <groupId>org.jboss.xnio</groupId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+   </dependencies>
 </project>
 
