ISPN-4487 Force OSGi test execution order
Conflicts:
	integrationtests/osgi/pom.xml

--- a/integrationtests/osgi/pom.xml
+++ b/integrationtests/osgi/pom.xml
@@ -199,6 +199,7 @@
             <configuration>
                <threadCount>1</threadCount>
                <parallel>classes</parallel>
+               <runOrder>alphabetical</runOrder>
             </configuration>
             <executions>
                <execution>
