BZ1136064 Externalizers not being used in the Lucene Directory

--- a/server/integration/testsuite/pom.xml
+++ b/server/integration/testsuite/pom.xml
@@ -777,6 +777,16 @@
             </properties>
         </profile>
         <profile>
+            <id>suite.query</id>
+            <properties>
+                <suite.manual.phase>integration-test</suite.manual.phase>
+                <suite.client.local.phase>none</suite.client.local.phase>
+                <suite.client.dist.phase>none</suite.client.dist.phase>
+                <suite.client.repl.phase>none</suite.client.repl.phase>
+                <suite.manual.include>**/query/*.java</suite.manual.include>
+            </properties>
+        </profile>
+        <profile>
             <id>client.memcached</id>
             <properties>
                 <suite.manual.phase>none</suite.manual.phase>
