BZ1147885 ISPN-4620 Add partition handling configuration in the server

--- a/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
+++ b/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
@@ -145,6 +145,11 @@ infinispan.state-transfer.chunk-size=The size, in bytes, in which to batch the t
 infinispan.state-transfer.add=Add a state transfer configuration.
 infinispan.state-transfer.remove=Remove a state transfer configuration.
 
+infinispan.partition-handling=The partition handling configuration for distribution and replicated caches
+infinispan.partition-handling.enabled=Configures the way this cache reacts to node crashes and split brains
+infinispan.partition-handling.add=Add a partition handling configuration
+infinispan.partition-handling.remove=Remove a partition handling configuration
+
 #infinispan.distributed-cache=The distributed cache configuration.
 infinispan.distributed-cache=A distributed cache
 infinispan.distributed-cache.owners=Number of cluster-wide replicas for each cache entry.
