--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -98,6 +98,32 @@
          <groupId>javax.cache</groupId>
          <artifactId>cache-api</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.jboss.arquillian.container</groupId>
+         <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.weld</groupId>
+         <artifactId>weld-core</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.spec</groupId>
+         <artifactId>jboss-javaee-6.0</artifactId>
+         <type>pom</type>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.logmanager</groupId>
+         <artifactId>jboss-logmanager</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-jdk14</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
    <build>
       <plugins>
@@ -163,38 +189,11 @@
    </build>
    <profiles>
       <profile>
-         <id>default</id>
-         <activation>
-            <activeByDefault>true</activeByDefault>
-         </activation>
-         <dependencies>
-            <dependency>
-               <groupId>org.jboss.arquillian.container</groupId>
-               <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-               <scope>test</scope>
-            </dependency>
-            <dependency>
-               <groupId>org.jboss.weld</groupId>
-               <artifactId>weld-core</artifactId>
-               <scope>test</scope>
-            </dependency>
-            <dependency>
-               <groupId>org.jboss.spec</groupId>
-               <artifactId>jboss-javaee-6.0</artifactId>
-               <type>pom</type>
-               <scope>test</scope>
-            </dependency>
-            <dependency>
-               <groupId>org.jboss.logmanager</groupId>
-               <artifactId>jboss-logmanager</artifactId>
-               <scope>test</scope>
-            </dependency>
-            <dependency>
-               <groupId>org.slf4j</groupId>
-               <artifactId>slf4j-jdk14</artifactId>
-               <scope>test</scope>
-            </dependency>
-         </dependencies>
+         <id>smoke</id>
+         <properties>
+            <!-- run all tests for this module even though it's a smoke test profile -->
+            <defaultTestGroup>functional,unit,arquillian</defaultTestGroup>
+         </properties>
       </profile>
    </profiles>
 </project>
